welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(b=4) {!avance();} 
       ^RunFour:4: error: value unary_! is not a member of Unit
while(b=4) {!avance();} 
            ^