welcome.lessons.welcome.variables.RunFour.scala.code
var b:Int=0
if(!estSurBiscuit) {avance();} else {b=b+1}
while(b=4) {!avance();}